# CA-2

Lab2/: CMakeLists.txt  Makefile  main.c  string_utils.c  string_utils.h
Lab4/: Makefile  hello.c
Lab5/: Makefile  hello1.c  hello2.c
Lab5/inc/: hello1.h
Lab6/: Makefile  hello.c
